--- a/ViewWPF/PrzychodniaMedyczna.csproj
+++ b/ViewWPF/PrzychodniaMedyczna.csproj
@@ -102,8 +102,8 @@
     <Compile Include="Views\PacientesCadastrados.xaml.cs">
       <DependentUpon>PacientesCadastrados.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\PaginaInicial.xaml.cs">
-      <DependentUpon>PaginaInicial.xaml</DependentUpon>
+    <Compile Include="Views\GlowneMenu.xaml.cs">
+      <DependentUpon>GlowneMenu.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\CadastrarMedico.xaml">
       <SubType>Designer</SubType>
@@ -153,7 +153,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\PaginaInicial.xaml">
+    <Page Include="Views\GlowneMenu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
