--- a/ViewWPF/PrzychodniaMedyczna.csproj
+++ b/ViewWPF/PrzychodniaMedyczna.csproj
@@ -106,11 +106,11 @@
     <Compile Include="baza\Wizyty.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="DAL\Lekarz.cs" />
-    <Compile Include="DAL\Pacient.cs" />
-    <Compile Include="DAL\Singel.cs" />
-    <Compile Include="DAL\Uzytkownik.cs" />
-    <Compile Include="DAL\Wizyta.cs" />
+    <Compile Include="Class\Lekarz.cs" />
+    <Compile Include="Class\Pacient.cs" />
+    <Compile Include="Class\Singel.cs" />
+    <Compile Include="Class\Uzytkownik.cs" />
+    <Compile Include="Class\Wizyta.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Views\ListaLekarzy.xaml.cs">
       <DependentUpon>ListaLekarzy.xaml</DependentUpon>
