--- a/ViewWPF/packages.config
+++ b/ViewWPF/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
+  <package id="Xceed.Wpf.Toolkit" version="4.4.22258.9000" targetFramework="net48" />
 </packages>
