--- a/ViewWPF/PrzychodniaMedyczna.csproj
+++ b/ViewWPF/PrzychodniaMedyczna.csproj
@@ -105,6 +105,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="baza\model2.cs" />
     <Compile Include="baza\Pacjenci.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -128,6 +129,11 @@
     <Compile Include="Class\Singel.cs" />
     <Compile Include="Class\Uzytkownik.cs" />
     <Compile Include="Class\Wizyta.cs" />
+    <Compile Include="Migrations\202206261643207_model2.cs" />
+    <Compile Include="Migrations\202206261643207_model2.designer.cs">
+      <DependentUpon>202206261643207_model2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Views\ListaLekarzy.xaml.cs">
       <DependentUpon>ListaLekarzy.xaml</DependentUpon>
@@ -233,6 +239,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Migrations\202206261643207_model2.resx">
+      <DependentUpon>202206261643207_model2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
