--- a/ViewWPF/packages.config
+++ b/ViewWPF/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
   <package id="linq2db" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
+  <package id="NSIS" version="2.51" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="Xceed.Wpf.Toolkit" version="4.4.22258.9000" targetFramework="net48" />
